--- a/recettes.html
+++ b/recettes.html
@@ -36,7 +36,9 @@
                     <li>huile d'olive</li>
                     <li>coriandre fraîche et sel</li>
                 </ul>
-            <button class="custom-buttton titre préparation button">Préparation</button>
+                <input type="radio" id="préparation-toggle" name="section-toggle" checked>
+                <label for="préparation-toggle">préparation"></label>
+            <!-- <button class="custom-buttton titre préparation button">Préparation</button> -->
                 <ol class="préparation">
                     <li>Dans un cul de poule mélangez un yaourt à la gecque avec la moitié des épices et le concentré de tomates.</li>
                     <li>Enrobez les morceaux de poulet de cette préparation et laissez macérer.</li>
@@ -97,9 +99,6 @@
 </section>
 
 
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
 
 </body>
