modif nom css recettes.css

--- a/recettes.html
+++ b/recettes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recettes magiques</title>
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/recettes.css">
 
 </head>
 <body>
@@ -21,6 +21,15 @@
         </div>
         <div>
             <button class="custom-button titre">Ingrédients</button>
+            <div class="nbre de pers">
+                <label for="nombre-personnes">Nbre de pers :</label>
+                <select id="nombre-personnes">
+                     <option value="2">2 pers</option>
+                     <option value="4">4 pers</option>
+                     <option value="6">6 pers</option>
+                     <option value="8">8 pers</option>
+                </select>
+             </div>
             <article>
                 <ul class="Ingrédients">
                     <li>1 poulet coupé en morceaux</li>
@@ -36,10 +45,8 @@
                     <li>huile d'olive</li>
                     <li>coriandre fraîche et sel</li>
                 </ul>
-                <input type="radio" id="préparation-toggle" name="section-toggle" checked>
-                <label for="préparation-toggle">préparation"></label>
-            <!-- <button class="custom-buttton titre préparation button">Préparation</button> -->
-                <ol class="préparation">
+            <button class="préparation-button titre" onclick="togglepréparation()">Préparation</button>
+                <ol class="préparation" tabindex="0">
                     <li>Dans un cul de poule mélangez un yaourt à la gecque avec la moitié des épices et le concentré de tomates.</li>
                     <li>Enrobez les morceaux de poulet de cette préparation et laissez macérer.</li>
                     <li>Dans une cocotte à feu moyen, faites dorer l'oignon épluché et émincé en petits dés avec un filet d'huile d'olive pendent 10 mn.</li>
@@ -64,6 +71,15 @@
         </div>
         <div>
             <button class="custom-button titre">Ingrédients</button>
+            <div class="nbre de pers">
+                <label for="nombre-personnes">Nbre de pers :</label>
+                <select id="nombre-personnes">
+                     <option value="2">2 pers</option>
+                     <option value="4">4 pers</option>
+                     <option value="6">6 pers</option>
+                     <option value="8">8 pers</option>
+                </select>
+             </div>
             <article>
                 <ul class="Ingrédients">
                     <li>Feuilles de vignes</li>
@@ -77,7 +93,8 @@
                     <li>sel et poivre noir au goût</li>
                     <li>Jus de citron et bouillon de légumes</li>
                 </ul>
-                <button class="custom-buttton titre">Préparation</button>
+            <button class="préparation-button titre" onclick="togglepréparation()">Préparation</button>
+                <ol class="préparation" tabindex="0">
                     <ol>
                         <li>Dans une poêle, faites chauffer l'huile d'olive à feu moyen. Ajoutez l'oignon haché.</li>
                         <li>Ajoutez la viande hachée à l'oignon et faites cuire jusqua ce qu'elle soit bien cuite.</li>
@@ -93,12 +110,17 @@
         </div>
 
 
-
-
     </section>
 </section>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<SCript>
+    function togglepréparation() {
+        var préparation = document.querySelector('.préparation');
+        préparation.style.display = (préparation.style.display==='none' || préparation.style.display ==='' ) ? 'block' : 'none';
+    }
+</SCript>
 
 </body>
