modif recettes et recettes2

--- a/recettes2.html
+++ b/recettes2.html
@@ -6,7 +6,6 @@
     <title>Recettes magiques</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./css/recettes.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 </head>
 <body>
@@ -47,7 +46,7 @@
                     <li>6 pièces de noix de cajou</li>
                     <li>1 pincée de sel/poivre</li>
                 </ul>
-                <button class="préparation-button titre" onclick="togglepréparation(this)">Préparation</button>
+            <button class="préparation-button titre" onclick="togglepréparation(this)">Préparation</button>
                 <ol class="préparation" tabindex="0">
                     <li>Peler et couper en dés l'oignon, puis couper en bâtonnets la carotte.</li> 
                     <li>Faire chauffer l'huile dans une poêle à feu moyen/vif et y saisir la pâte de curry, l'oignon et la carotte pendant 3 mn.</li>
@@ -86,14 +85,35 @@
              </div>
             <article>
                 <ul class="Ingrédients">
-                    <li></li>
+                    <li>1 boîte de canellonis</li>
+                    <li>2 courgettes</li>
+                    <li>1 gousse d'ail</li>
+                    <li>150gr de fromage de chèvre frais</li>
+                    <li>15cl de crème fraîche liquide</li>
+                    <li>1 jaune d'oeuf</li>
+                    <li>50gr de parmesan râpé</li>
+                    <li>2 càs de feuilles de basilic sèches</li>
+                    <li>2 càs d'huile d'olive</li>
+                    <li>Sel et poivre au goût</li>
+                       
                 </ul>
-                <button class="préparation-button titre" onclick="togglepréparation(this)">Préparation</button>
-                <ol class="préparation" tabindex="0">
-                    <ol>
-                        <li></li>
-                    </ol>
-                </article>
+            <button class="préparation-button titre" onclick="togglepréparation(this)">Préparation</button>
+            <ol class="préparation" tabindex="0">
+                 <ol>
+                     <li>Préchauffez le four à 220°C ou sur th. 7-8.</li>
+                     <li>Dans une casserole d'eau portée à ébullition, plongez les canellonis et laissez les cuire pendant 2mn envrion.</li>
+                     <li>lavez, épongez et râpez les courgettes</li>
+                     <li>Pelez et émincez finement l'ail</li>
+                     <li>Dans une poêle chauffer avec un filet d'huile d'olive, déposez les courgettes râpées et l'ail émincé et faîtes les revenir 5mn.</li>
+                     <li>Ajoutez-y le fromage de chèvre et le basilic séché, salez et poivrez à votre goût, mélangez bien et poursuivez la cuisson pendant 2-3 mn.</li>
+                     <li>Dans un plat beurré au four, farcissez les canellonis égouttés avec la préparation au chèvre, réservez 3 càs de cette préparation.</li>
+                     <li>Mélangez ces 3 cuillères réservées de préparation au chèvre avec de la crème fraîche liquide et le jaune d'oeuf, salez er poivrez.</li>
+                     <li>Versez ensuite le tout sur les canellonis dans le plat puis parsemez la surface de parmesan râpé. </li>
+                     <li>Enfournez le plat dans le four préchauffé et laissez cuire pendant 10 mn environ jusqu’à ce que la surface soit gratinée.</li>
+                     <li>Servez bien chaud !</li>
+
+            </article>
+
             </div>
         </div>
 
