modif image recettes html

--- a/recettes.html
+++ b/recettes.html
@@ -67,7 +67,7 @@
         <div>
             <h2>Dolma (Grèce)</h2>
             <figure class="PT">
-                <img src="/images/dolma.jpg" alt="">
+                <img src="./images/dolma.jpg" alt="">
                 <i class="fas fa-heart favorite-icon1 coeur"></i>
             </figure>
         </div>
