modif footer-formulaire

--- a/contact2.html
+++ b/contact2.html
@@ -42,7 +42,7 @@
     <div class="container">
   <h1>Formulaire de contact</h1>
   
-  <form action="/action_page.php">
+  <form action="file:///Users/Lartiste/Desktop/RECETTESMAGIQUES/traitement-formulaire.html" method="post">
     <label for="fname">Nom & prénom</label>
     <input type="text" id="fname" name="firstname" placeholder="Votre nom et prénom">
 
@@ -67,13 +67,13 @@
             <a href="contact2.html">Contactez nous</a>
         </li>
         <li>
-            <a href="mentionlegales.html">Mentions legales</a>
+            <a href="mentionlegales.html">Mentions légales</a>
         </li>
         <li>
-            <a href="#">Charte de confidentialité</a>
+            <a href="https://www.fondationdentreprisehermes.org/sites/default/files/pdf/fondation-confidentialite.pdf">Charte de confidentialité</a>
         </li>
         <li>
-            <a href="#">Prefèrences cookies</a>
+            <a href="file:///Users/Lartiste/Desktop/RECETTESMAGIQUES/Preferences%20Cookies.html">Prefèrences cookies</a>
         </li>
     </ul>
     
