--- a/contact2.html
+++ b/contact2.html
@@ -32,9 +32,9 @@
                 
                 <ul> 
                     <li><a href="">Menu</a></li>
-                    <li><a href="file:///Users/Lartiste/Desktop/RECETTESMAGIQUES/Connexion.HTML">Se Connecter</a></li>
-                    <li><a href="file:///Users/Lartiste/Desktop/RECETTESMAGIQUES/la-recette-mystere.html">La recette Mystère</a></li>
-                    <li> <a href="la-recette-mystere.html">Catalogues de Recettes</a></li>
+                    <li><a href="./Connexion.HTML">Se Connecter</a></li>
+                    <li><a href="./la-recette-mystere.html">La recette Mystère</a></li>
+                    <li> <a href="Catalogue.html">Catalogues de Recettes</a></li>
                 </ul>
             </div>
         </nav>
