--- a/Catalogue.html
+++ b/Catalogue.html
@@ -22,7 +22,7 @@
                     <li><a href="">Menu</a></li>
                     <li><a href="./Connexion.HTML">Se Connecter</a></li>
                     <li><a href="./la-recette-mystere.html">La recette Mystère</a></li>
-                    <li> <a href="./Catalogue.html">Catalogues de Recettes</a></li>
+                    <li> <a href="./Catalogue.html">Catalogue de Recettes</a></li>
                 </ul>
             </div>
         </nav>
