--- a/contact2.html
+++ b/contact2.html
@@ -34,7 +34,7 @@
                     <li><a href="">Menu</a></li>
                     <li><a href="./Connexion.HTML">Se Connecter</a></li>
                     <li><a href="./la-recette-mystere.html">La recette Mystère</a></li>
-                    <li> <a href="Catalogue.html">Catalogues de Recettes</a></li>
+                    <li> <a href="Catalogue.html">Catalogue de Recettes</a></li>
                 </ul>
             </div>
         </nav>
@@ -70,10 +70,10 @@
             <a href="mentionlegales.html">Mentions légales</a>
         </li>
         <li>
-            <a href="https://www.fondationdentreprisehermes.org/sites/default/files/pdf/fondation-confidentialite.pdf">Charte de confidentialité</a>
+            <a href="">Charte de confidentialité</a>
         </li>
         <li>
-            <a href="file:///Users/Lartiste/Desktop/RECETTESMAGIQUES/Preferences%20Cookies.html">Prefèrences cookies</a>
+            <a href="./Preferences Cookies.html">Prefèrences cookies</a>
         </li>
     </ul>
     
