--- a/la-recette-mystere.html
+++ b/la-recette-mystere.html
@@ -324,33 +324,33 @@
 
 
 
-<label for="ingredient1">
-    <input type="checkbox" id="ingredient50" class="hidden-checkbox">
+<label for="ingredient55">
+    <input type="checkbox" id="ingredient55" class="hidden-checkbox">
 <img src="./icons/icons8-halal-food-100.png" alt="halal">
 </label>
 
-<label for="ingredient1">
-    <input type="checkbox" id="ingredient1" class="hidden-checkbox">
+<label for="ingredient56">
+    <input type="checkbox" id="ingredient56" class="hidden-checkbox">
 <img src="./icons/icons8-no-eggs-100.png" alt="nooeuf">
 </label>
 
-<label for="ingredient1">
-    <input type="checkbox" id="ingredient1" class="hidden-checkbox">
+<label for="ingredient57">
+    <input type="checkbox" id="ingredient57" class="hidden-checkbox">
 <img src="./icons/icons8-no-fish-100.png" alt="nopoisson">
 </label>
 
-<label for="ingredient1">
-    <input type="checkbox" id="ingredient1" class="hidden-checkbox">
+<label for="ingredient58">
+    <input type="checkbox" id="ingredient58" class="hidden-checkbox">
 <img src="./icons/icons8-no-meat-100.png" alt="noviande">
 </label>
 
-<label for="ingredient1">
-    <input type="checkbox" id="ingredient1" class="hidden-checkbox">
+<label for="ingredient59">
+    <input type="checkbox" id="ingredient59" class="hidden-checkbox">
 <img src="./icons/icons8-dairy-100.png" alt="Lait">
 </label>
 
-<label for="ingredient1">
-    <input type="checkbox" id="ingredient1" class="hidden-checkbox">
+<label for="ingredient60">
+    <input type="checkbox" id="ingredient60" class="hidden-checkbox">
 <img src="./icons/icons8-vegetarian-mark-100.png" alt="veggie">
 </label>
 <a href="./resultatrecettemystere.html" class="bouton-magie">Magie</a>
@@ -373,7 +373,7 @@
                     <a href="./">Charte de confidentialité</a>
                 </li>
                 <li>
-                    <a href="./">Prefèrences cookies</a>
+                    <a href="./Preferences Cookies.html">Prefèrences cookies</a>
                 </li>
             </ul>
             
