--- a/traitement-formulaire.html
+++ b/traitement-formulaire.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <header>
-    <a href="file:///Users/Lartiste/Desktop/RECETTESMAGIQUES/frontpage.html"><img src="./images/home.png" alt="home"></a>
+    <a href="./frontpage.html"><img src="./images/home.png" alt="home"></a>
 </header>
 <body>
     
