--- a/mdp oublié.html
+++ b/mdp oublié.html
@@ -52,7 +52,7 @@
                 <a href="mentionlegales.html">Mentions légales</a>
             </li>
             <li>
-                <a href="https://www.fondationdentreprisehermes.org/sites/default/files/pdf/fondation-confidentialite.pdf">Charte de confidentialité</a>
+                <a href="">Charte de confidentialité</a>
             </li>
             <li>
                 <a href="./Preferences Cookies.html">Prefèrences cookies</a>
