--- a/Inscription.html
+++ b/Inscription.html
@@ -72,7 +72,7 @@
             <a href="mentionlegales.html">Mentions légales</a>
         </li>
         <li>
-            <a href="">Charte de confidentialité</a>
+            <a href="./">Charte de confidentialité</a>
         </li>
         <li>
             <a href="./Preferences Cookies.html">Prefèrences cookies</a>
@@ -100,7 +100,6 @@
         </a>
       
     </div>
-
     
 </footer>
 
