--- a/Catalogue.html
+++ b/Catalogue.html
@@ -68,7 +68,7 @@
         <div class="image">
             <figure>
                 <a href="https://www.ricardocuisine.com/recettes/desserts?searchValue=&sort=alpha&content-type=recipe&grouping-type=1&currentPage=1" target="_blank">
-                 <img src="M's Images/Dessert.png" alt="Desserts" height="250px"> 
+                 <img src="M's Images/Desserts.png" alt="Desserts" height="250px"> 
                 </a>
             </figure>
         </div>
