--- a/Catalogue.html
+++ b/Catalogue.html
@@ -92,7 +92,7 @@
                 <a href="mentionlegales.html">Mentions légales</a>
             </li>
             <li>
-                <a href="./">Charte de confidentialité</a>
+                <a href="charte de confidentialité.html">Charte de confidentialité</a>
             </li>
             <li>
                 <a href="./Preferences Cookies.html">Prefèrences cookies</a>
