--- a/Inscription.html
+++ b/Inscription.html
@@ -11,7 +11,6 @@
 
 <body>
     <header>
-    
         <nav>
             <a href="frontpage.html"><img src="./M's Images/HomeVert.png" alt="home"></a>
            
@@ -31,6 +30,7 @@
     <div class="inner-container">
     <h1>S'inscrire</h1>
     <h4>En créeant un compte vous pouvez élaborer des livres de recettes personalisés.</h4>
+    <form action="Confirminscp.html">
    <label for="nom">
         <input type="text" name="nom" placeholder="Nom" id="nom" required>
     </label>
@@ -57,7 +57,9 @@
     </label>
 </p> 
     <br><br>
-    <button>S'inscrire</button>
+    <!-- <button>S'inscrire</button> -->
+    <input type="submit" class="my-submit-button" value="S'inscrire">
+</form>
     <br><br>
     <a href="Connexion.HTML" class="deja-compte">J'ai déjà un compte, je me connecte.</a>
 </div>
