--- a/Confirminscp.html
+++ b/Confirminscp.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <div class="text-box">
-        <h1>Bienvenu aux Recettes Magiques !</h1>
+        <h1>Bienvenue aux Recettes Magiques !</h1>
         <p>Vous pouvez maintenant accéder à la magie !</p> 
     
         <img src="./images/Chaps walking.gif" alt="">
