ajout recette mystère

--- a/contact2.html
+++ b/contact2.html
@@ -70,10 +70,10 @@
             <a href="mentionlegales.html">Mentions légales</a>
         </li>
         <li>
-            <a href="https://www.fondationdentreprisehermes.org/sites/default/files/pdf/fondation-confidentialite.pdf">Charte de confidentialité</a>
+            <a href="./Char">Charte de confidentialité</a>
         </li>
         <li>
-            <a href="file:///Users/Lartiste/Desktop/RECETTESMAGIQUES/Preferences%20Cookies.html">Prefèrences cookies</a>
+            <a href="./Preferences Cookies.html">Prefèrences cookies</a>
         </li>
     </ul>
     
