--- a/frontpage.html
+++ b/frontpage.html
@@ -22,7 +22,20 @@
             <div class="nav-links">
                 
                 <ul> 
-                     <li><a href="">Menu</a></li>
+                     <li>
+                        <a href="#">Menu</a>
+                        <div class="dropdown-content">
+                            <a href="./contact2.html">Contact</a>
+                            <a href="./mentionlegales.html">Mentions Légales</a>
+                            <a href="./Preferences Cookies.html">Préférences de Cookies</a>
+                            <a href="./charte de confidentialité.html">Charte de Confidentialité</a>
+                            <a href="./Catalogue.html">Catalogue</a>
+                            <a href="./frontpage.html">Menu</a>
+                            <a href="./frontpage.html">Home</a>
+                            <a href="la-recette-mystere.html">Rechercher</a>
+                            <a href="./Connexion.HTML">Login</a>
+                        </div>
+                    </li>
                     <li><a href="./Connexion.HTML">Se Connecter</a></li>
                     <li> <a href="la-recette-mystere.html">La recette Mystere</a></li>
                     <li><a href="./Catalogue.html">Catalogue de Recettes</a></li>
