--- a/frontpage.html
+++ b/frontpage.html
@@ -32,7 +32,7 @@
                             <a href="./Catalogue.html">Catalogue</a>
                             <a href="./frontpage.html">Menu</a>
                             <a href="./frontpage.html">Home</a>
-                            <a href="la-recette-mystere.html">Rechercher</a>
+                            <a href="la-recette-mystere.html">La recette Mystere</a>
                             <a href="./Connexion.HTML">Login</a>
                         </div>
                     </li>
