--- a/frontpage.html
+++ b/frontpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE YUM</title>
+    <title>LES RECETTES MAGIQUES !!</title>
    
     <link rel="preconnect" href="https://fonts.gstatic.com">
 
@@ -32,7 +32,7 @@
 
         <div class="text-box">
 
-            <h1>THE YUM!</h1>   
+            <h1>LES RECETTES MAGIQUES !!</h1>   
             <p>"Cuisinez avec Passion : Votre Aventure Culinaire Commence Ici <br>
 
             Bienvenue sur notre site de recettes, où vous attendent des aventures culinaires passionnantes ! 
