--- a/contact2.html
+++ b/contact2.html
@@ -44,7 +44,7 @@
     <div class="container">
   <h1>Formulaire de contact</h1>
   
-  <form action="file:///Users/Lartiste/Desktop/RECETTESMAGIQUES/traitement-formulaire.html" method="post">
+  <form action="./traitement-formulaire.html" method="post">
     <label for="fname">Nom & prénom</label>
     <input type="text" id="fname" name="firstname" placeholder="Votre nom et prénom">
 
