--- a/frontpage.html
+++ b/frontpage.html
@@ -134,7 +134,7 @@
  <!--------Nouveautés-------->
 
 <section class="AutreChose">
-    <h1> Nouveautés</h1>
+    <h1> Conseil de la semaine</h1>
     <p></p>
    
     <div class="row">
